Fix missing background for tasks on a shared list with a background

--- a/src/styles/components/task.scss
+++ b/src/styles/components/task.scss
@@ -244,10 +244,6 @@
   }
 }
 
-.link-share-container .task-view {
-  background-color: transparent;
-}
-
 .flash-background-enter, .flash-background-enter-active  {
   animation: flash-background $flash-background-duration ease 1;
 }
